@@ -62,6 +62,7 @@
 - fix mountd vers retry.
 - fix expire race.
 - include ip address in debug logging.
+- mount using address for DNS round robin host names.
 
 03/09/2009 autofs-5.0.5
 -----------------------
